[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
dotenv = "0.15.0"
serde = {version = "1.0.144", features = ['derive']}
serde_json = "1.0.85"
termimad = "0.20.2"
thiserror = "1.0.34"
ureq = "2.4.0"
